force-app/main/default/objects/Admin_Setting__c/Admin_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Admin Setting</label>
</CustomObject>