force-app/main/default/objects/Admin_Setting__c/fields/Billing_Emails__c.field-meta.xml
<CustomField>
    <fullName>Billing_Emails__c</fullName>
    <description>This field used to store emails separated by &quot;;&quot;. These emails will be used in Billing schedule job(send billing report).</description>
    <label>Billing Emails</label>
    <type>TextArea</type>
</CustomField>