force-app/main/default/objects/Admin_Setting__c/fields/Credit_Check_Email_template__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Email_template__c</fullName>
    <label>Credit Check Email template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>