force-app/main/default/objects/Admin_Setting__c/fields/Credit_Check_Emails__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Emails__c</fullName>
    <label>Credit Check Emails</label>
    <type>TextArea</type>
</CustomField>