force-app/main/default/objects/Admin_Setting__c/fields/Doxis_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Doxis_Account_Id__c</fullName>
    <description>Used to store Doxis Account</description>
    <label>Doxis Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>