force-app/main/default/objects/Admin_Setting__c/fields/Edit_Legal_Info_Emails__c.field-meta.xml
<CustomField>
    <fullName>Edit_Legal_Info_Emails__c</fullName>
    <label>Edit Legal Info Emails</label>
    <type>TextArea</type>
</CustomField>