force-app/main/default/objects/Admin_Setting__c/fields/Tier_Approval_Emails__c.field-meta.xml
<CustomField>
    <fullName>Tier_Approval_Emails__c</fullName>
    <label>Tier Approval Emails</label>
    <type>TextArea</type>
</CustomField>