force-app/main/default/objects/Admin_Setting__c/fields/Tier_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Tier_Email_Template__c</fullName>
    <label>Tier Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>